// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingState Component renders correctly with a different message 1`] = `
<DocumentFragment>
  <div
    class="p-8 text-center bg-gray-50 rounded-lg"
  >
    Fetching results...
  </div>
</DocumentFragment>
`;

exports[`LoadingState Component renders correctly with a message 1`] = `
<DocumentFragment>
  <div
    class="p-8 text-center bg-gray-50 rounded-lg"
  >
    Loading data...
  </div>
</DocumentFragment>
`;
